--- a/app/views/activity_logs/index.html.erb
+++ b/app/views/activity_logs/index.html.erb
@@ -1,35 +1,87 @@
-<h1>Log de actividades</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Bebé</th>
-      <th>Asistente</th>
-      <th>Actividad</th>
-      <th>Inicio</th>
-      <th>Estatus</th>
-      <th>Duración</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @activities_log.each do |activity| %>
-      <tr>
-        <td><%= activity.id %></td>
-        <td><%= activity.baby.name %></td>
-        <td><%= activity.assistant.name %></td>
-        <td><%= activity.activity.name %></td>
-        <td><%= activity.start_time.to_datetime.in_time_zone("America/Monterrey").strftime('%Y-%m-%d %H:%M') %></td>
-        <%if activity.stop_time.nil? || activity.stop_time.blank?%>
-          <td>En progreso</td>
-        <%else %>
-          <td>Terminada</td>
-        <%end %>
-        <%if activity.stop_time.nil? || activity.stop_time.blank?%>
-          <td>*</td>
-        <%else %>
-          <td><%= activity.duration %> min</td>
-        <%end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Log de actividades</h1>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="col-md-12">
+      <table class="table" id="mytable">
+        <thead>
+        <tr>
+          <th>Bebé</th>
+          <th>Asistente</th>
+          <th>Actividad</th>
+          <th>Inicio</th>
+          <th>Estatus</th>
+          <th>Duración</th>
+        </tr>
+        <tr>
+          <th class="filterhead">Bebé</th>
+          <th class="filterhead">Asistente</th>
+          <th class="filterhead"></th>
+          <th class="filterhead"></th>
+          <th class="filterhead">Estatus</th>
+          <th class="filterhead"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @activities_log.each do |activity| %>
+          <tr>
+            <td><%= activity.baby.name %></td>
+            <td><%= activity.assistant.name %></td>
+            <td><%= activity.activity.name %></td>
+            <td><%= activity.start_time.to_datetime.in_time_zone("America/Monterrey").strftime('%Y-%m-%d %H:%M') %></td>
+            <%if activity.stop_time.nil? || activity.stop_time.blank?%>
+              <td>En progreso</td>
+            <%else %>
+              <td>Terminada</td>
+            <%end %>
+            <%if activity.stop_time.nil? || activity.stop_time.blank?%>
+              <td>*</td>
+            <%else %>
+              <td><%= activity.duration %> min</td>
+            <%end %>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script>
+    $(document).ready(function() {
+        $('#mytable').DataTable( {
+            //"searching": false,
+            "bLengthChange": false,
+            "bInfo": false,
+            "order": [[ 3, "desc" ]],
+            "orderCellsTop": true,
+            "dom": 'Bfrtip',
+            initComplete: function () {
+                var api = this.api();
+                $('.filterhead', api.table().header()).each( function (i) {
+                    var column = api.column(i);
+                    var select = $('<select><option value=""></option></select>')
+                        .appendTo( $(this).empty() )
+                        .on( 'change', function () {
+                            var val = $.fn.dataTable.util.escapeRegex(
+                                $(this).val()
+                            );
+
+                            column
+                                .search( val ? '^'+val+'$' : '', true, false )
+                                .draw();
+                        } );
+
+                    column.data().unique().sort().each( function ( d, j ) {
+                        select.append( '<option value="'+d+'">'+d+'</option>' );
+                    } );
+                } );
+            }
+        } );
+    } );
+</script>
